0023532: Mismatching allocation and deallocation: anAsciiString, CDM_COutMessageDriver.cxx

Replaced 'delete' with 'delete []' when deallocating array.